--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 #   git config --global core.excludesfile '~/.gitignore_global'
 
 # Ignore bundler config.
-/.bundle
+# /.bundle
 
 # Ignore the default SQLite database.
 /db/*.sqlite3
@@ -72,7 +72,7 @@ build/
 /rdoc/
 
 ## Environment normalisation:
-/.bundle/
+#/.bundle/
 /vendor/bundle
 /lib/bundler/man/
 
@@ -107,7 +107,7 @@ config/initializers/secret_token.rb
 config/secrets.yml
 
 ## Environment normalisation:
-/.bundle
+#/.bundle
 /vendor/bundle
 
 # these should all be checked in to normalise the environment:
@@ -136,4 +136,3 @@ Session.vim
 
 
 .bin
-.bundle
